--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -309,7 +309,7 @@
   
   .link-source {
     color: #888;
-    font-size: 0.85rem;
+    font-size: 0.7rem;
   }
 
   ul.link-list {
@@ -322,7 +322,7 @@
   }
   
   ul.link-list li {
-    margin-bottom: 0.75rem;
+    margin-bottom: 0rem;
   }
   
   /* Force link color to match your theme */
@@ -338,5 +338,43 @@
   }
   
   
+  .section-title-centered {
+    text-align: center;
+    font-size: 1.8rem;
+    margin-bottom: 1.5rem;
+    color: var(--highlight);
+    font-family: 'Libre Baskerville', serif;
+    font-weight: 400;
+  }
+  
+  .image-grid {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    justify-content: center;
+    margin-top: 1.5rem;
+  }
+  
+  .image-grid img {
+    width: 200px;
+    height: auto;
+    border-radius: 0px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+  }
+  
  
-    
+  .profile-image-container {
+    box-shadow: -2rem 2rem 0 rgba(0, 60, 77, 0.15);
+    margin: 0 2rem 4rem 2.5rem;
+    flex-shrink: 0;
+  }
+  
+  .profile-image {
+    max-width: 100%;
+    width: 100%;
+    max-width: 300px;
+    height: auto;
+    display: block;
+    border-radius: 0px;
+  }
+  
