--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,9 +34,10 @@
   }
   .header-logo-fixed {
   position: absolute;
-  top: 2.2rem;
+  top: 2rem;
+  bottom: 2rem;
   left: 4rem;
-  width: 125px;
+  width: 8.5em;
   height: auto;
 }
 
