--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 :root {
     --primary: #F9F5ED; /* Soft dusty rose */
     --accent: #DD613C; /* Creamy blush */
-    --highlight: #4E6B77; /* Deep mauve-gray */
+    --highlight: #1e3139; /* Deep mauve-gray */
     --background: #4E6B77;
     --nav-color: #7A949B ;
     --header-color: #4E6B77;
